    would be translated to <body xml:lang=".."> attribute in Fiction-XML (and
    eventually to DocBook 5/XML).
    * Add support for the lang="..." attribute in <section>/<s>.
    * Add the <span> tag for Fiction-Text (already exists in Fiction-XML).
        - supports two attributes - lang -> xml:lang and id -> xml:id.
    * Bumped the testing dependencies for Test::XML version '0.08' and
    XML::SemanticDiff '1.0000' - the test failed otherwise.

0.6.0      Mon May 23 22:59:05 IDT 2011
    * Add the version="5.0" attribute to the top-level tag of the
    DocBook 5/XML generated by extradata/fiction-xml-to-docbook.xslt .
    * Got rid of leftover files in t/fiction/data that were not used
    by the tests.
    * A lot of refactoring and cleanup - moved some modules from
    XML-Grammar-Fiction to XML-Grammar-FictionBase .
    
0.5.1       Sun May 22 09:33:43 IDT 2011
    * Fix the handling of entities at the start of the opening line of
    paragraphs in the Fiction-Text . See 
    t/fiction/data/proto-text/paras-with-entities-at-start-of-line.txt .

0.5.0       Sat May 21 23:20:43 IDT 2011
    * Add support for the <programinglisting> tag.
    * Fix the handling of the entities ("&amp;" "&#32;" etc.) in Fiction-Text.

0.4.1       Sat May 21 19:45:56 IDT 2011
    * Properly handling whitespace after a closing tag in the Fiction-Text
    proto-text. Like:
        - "</b> foo" should be translated "</b> foo" instead of "</b>foo".

0.4.0       Fri May 20 15:46:18 IDT 2011
    * Updated some of the bug report URLs to read "XML-Grammar-Fiction"
    instead of "XML-Grammar-Screenplay".
    * Add support for the <blockquote> tag to Fiction-XML / Fiction-Text.

0.3.0       Tue May 17 22:59:17 IDT 2011
    * Add extradata/screenplay-xml-to-tei.xslt and 
    lib/XML/Grammar/Screenplay/ToTEI.pm - add tests for them.
        - They convert Screenplay-XML into TEI - Text Encoding Initiative,
        a markup language for digital representation of texts (especially 