@@ -6,6 +6,8 @@ Revision history for XML-Grammar-Fiction.
     * Add support for the lang="..." attribute in <section>/<s>.
     * Add the <span> tag for Fiction-Text (already exists in Fiction-XML).
         - supports two attributes - lang -> xml:lang and id -> xml:id.
+    * Now supporting xml:lang and xml:id in the <a /> tag in Fiction-Text
+    and Fiction-XML .
     * Bumped the testing dependencies for Test::XML version '0.08' and
     XML::SemanticDiff '1.0000' - the test failed otherwise.
 
